--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.mvc.view.suffix=.jsp
 spring.main.banner-mode=off
 spring.resources.add-mappings=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sample
-spring.datasource.username=root
-spring.datasource.password=Tivo2019
+spring.datasource.username=
+spring.datasource.password=
 spring.session.store-type=redis
 spring.redis.host=localhost 
 spring.redis.port=6379 
